@@ -1,4 +1,5 @@
 HEAD
+	+ Show upgrade button to 5.1 in dashboard
 	+ Migrate SOGo database when upgrading to 5.1
 5.0.11
 	+ Add support for pepertual licenses
